--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -45,28 +45,72 @@ li {
     margin: 15px 0;
 }
 
-#overlay {
-    visibility: hidden;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width:100%;
-    height:100%;
-    text-align:center;
-    z-index: 1000;
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-#overlay div {
-    width:300px;
+TABLE {
+    width: 300px; /* Ширина таблицы */
+    border-collapse: collapse; /* Убираем двойные линии между ячейками */
+    border: 1px;
+}
+
+TD, TH {
+    padding: 3px; /* Поля вокруг содержимого таблицы */
+    border: 0 solid black; /* Параметры рамки */
+}
+
+TH {
+    background: #b0e0e6; /* Цвет фона */
+}
+
+.close {
+    text-decoration: underline
+}
+
+#position_overlay {
+    visibility: hidden;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 200;
+    background-color: black;
+    opacity: 0.9;
+}
+
+#position_overlay div {
+    width: 300px;
     margin: 100px auto;
     background-color: #fff;
-    border:1px solid #000;
-    padding:15px;
-    text-align:center;
+    border: 1px solid #000;
+    padding: 15px;
+    text-align: center;
 }
 
-body {
-    height:100%;
-    margin:0;
-    padding:0;
+#organization_overlay {
+    visibility: hidden;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 200;
+    background-color: black;
+    opacity: 0.9;
+}
+
+#organization_overlay div {
+    width: 300px;
+    margin: 100px auto;
+    background-color: #fff;
+    border: 1px solid #000;
+    padding: 15px;
+    text-align: center;
 }
